# turing-machine-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust_2018.yml  rust_2021.yml  rust_nightly.yml  rust_stable.yml
examples/: README.md  binary_addition.rs  hyper_machine.rs  nice_test.rs
src/: core.rs  lib.rs  turing.rs
src/instruction/: direction.rs  head.rs  mod.rs  movement.rs  state.rs  tail.rs
src/machines/: classic.rs  debugger.rs  mod.rs
src/program/: core.rs  mod.rs
src/state/: configuration.rs  mod.rs  tape.rs
tests/: instruction_head.rs  instruction_instruction.rs  instruction_state.rs  instruction_tail.rs  machines_classic.rs  machines_debugger.rs  program.rs  state_configuration.rs  state_tape.rs
