[package]
name = "turing-machine-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"
authors = ["Helltraitor <helltraitor@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Helltraitor/turing-machine-rs"
description = """
Open library for implementation Turing Machines.
"""

categories = ["mathematics", "science", "simulation"]
keywords = ["cross-platform", "math", "science", "simulation", "turing-machine"]
exclude = [".github/*", ".gitignore"]
